--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,8 @@
 [tool.pdm]
+[tool.pdm.dev-dependencies]
+dev = [
+    "python-dotenv>=0.21.1",
+]
 
 [project]
 name = "richillcapital-tdameritrade"
